--- a/packages/solid-ionic/package.json
+++ b/packages/solid-ionic/package.json
@@ -19,7 +19,8 @@
     "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
-    "@ionic/core": "^7.0.11",
+    "@ionic/core": "^7.0.12",
+    "ionicons": "^7.1.2",
     "solid-js": "^1.7.6"
   },
   "keywords": [
